[gd_scene load_steps=3 format=3 uid="uid://b5jillrcn4i73"]

[ext_resource type="Script" path="res://scripts/register.gd" id="1_bcdcu"]
[ext_resource type="Texture2D" uid="uid://b7xivf5tlfglv" path="res://assets/images/background-secondary.png" id="2_p0rve"]

[node name="Register" type="Node2D"]
script = ExtResource("1_bcdcu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
color = Color(0.027451, 0.0823529, 0.145098, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_p0rve")

[node name="Title" type="HBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 90.0
offset_right = 1420.0
offset_bottom = 159.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.886275, 0.882353, 1)
theme_override_font_sizes/font_size = 50
text = "Cadastro"

[node name="Username" type="VBoxContainer" parent="."]
offset_left = 600.0
offset_top = 230.0
offset_right = 1320.0
offset_bottom = 337.0

[node name="name" type="Label" parent="Username"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Nome de usuário:"

[node name="input-name" type="LineEdit" parent="Username"]
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_outline_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
virtual_keyboard_type = 5
structured_text_bidi_override = 3

[node name="Password" type="VBoxContainer" parent="."]
offset_left = 600.0
offset_top = 384.0
offset_right = 1320.0
offset_bottom = 473.0

[node name="password" type="Label" parent="Password"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Senha:"

[node name="input-password" type="LineEdit" parent="Password"]
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_outline_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
virtual_keyboard_type = 6
structured_text_bidi_override = 3

[node name="ConfirmPassword" type="VBoxContainer" parent="."]
offset_left = 600.0
offset_top = 543.0
offset_right = 1320.0
offset_bottom = 632.0

[node name="confirm-password" type="Label" parent="ConfirmPassword"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Confirme sua senha:"

[node name="input-confirm-password" type="LineEdit" parent="ConfirmPassword"]
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_outline_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
virtual_keyboard_type = 6
structured_text_bidi_override = 3

[node name="Language" type="VBoxContainer" parent="."]
offset_left = 600.0
offset_top = 698.0
offset_right = 1320.0
offset_bottom = 787.0

[node name="Label" type="Label" parent="Language"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Idioma:"

[node name="OptionButton" type="OptionButton" parent="Language"]
custom_minimum_size = Vector2(720, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
item_count = 2
popup/item_0/text = "Português"
popup/item_0/id = 1
popup/item_1/text = "English"
popup/item_1/id = 2

[node name="Login" type="HBoxContainer" parent="."]
offset_left = 601.0
offset_top = 839.0
offset_right = 1171.0
offset_bottom = 889.0

[node name="login" type="Label" parent="Login"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Já possui uma conta?"

[node name="login-button" type="Button" parent="Login"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.698039, 0.509804, 0.384314, 1)
theme_override_colors/font_pressed_color = Color(0.823529, 0.74902, 0.682353, 1)
theme_override_colors/font_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_font_sizes/font_size = 30
text = "Faça login"
flat = true

[node name="RegisterButton" type="Button" parent="."]
offset_left = 883.0
offset_top = 922.0
offset_right = 1055.0
offset_bottom = 986.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Cadastrar"

[node name="user-exists" type="Label" parent="."]
visible = false
offset_left = 832.0
offset_top = 894.0
offset_right = 1108.0
offset_bottom = 922.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "O usuário já está cadastrado"

[node name="required-username" type="Label" parent="."]
visible = false
offset_left = 600.0
offset_top = 320.0
offset_right = 847.0
offset_bottom = 348.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Este campo é obrigatório!"

[node name="required-password" type="Label" parent="."]
visible = false
offset_left = 600.0
offset_top = 473.0
offset_right = 847.0
offset_bottom = 501.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Este campo é obrigatório!"

[node name="required-confirm-password" type="Label" parent="."]
visible = false
offset_left = 600.0
offset_top = 632.0
offset_right = 847.0
offset_bottom = 660.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Este campo é obrigatório!"

[connection signal="button_down" from="Login/login-button" to="." method="_on_loginbutton_button_down"]
[connection signal="button_down" from="RegisterButton" to="." method="_on_register_button_button_down"]
